# Zonzijde

./: .gitignore  CLAUDE.md  README.md  concept_ZZ.md  fonts.css  index.html  krant-mockups.html  krant.html  proto_fetchfilter.html  proto_krant.html  pyproject.toml  sunflower-icon-mockups.html
.github/: pull_request_template.md
.github/workflows/: pages.yml
config/: edition.yaml  filters.yaml  sources.yaml
config/prompts/: brief.md  classify.md  illustrate.md  outline.md  pipeline.md  review.md  score.md  select.md  stijlgids.md  write.md
data/: README.md  bgg_top300_2021-02.csv
docs/: ARCHITECTURE.md  SPEC.md  STIJLGIDS.md  spec_visualization_automation.md  spec_visualization_automation_mockup.html
docs/history/: concept_ZZ.md
editions/2026-07-19/: report.md
editions/2026-07-19/work/: 10-fetch-log.json  10-items.json  20-filtered.json  20-rejected.json  30-score-log.json  30-scored.json  40-candidates.json  40-select-log.json  50-articles.json  50-enrich-log.json  60-outline-log.json  60-outline.json  70-drafts.json  70-write-log.json  80-review-log.json  80-reviewed.json
reports/2026-07-26/: edition.json  report.md
templates/: krant.typ
tests/: conftest.py  eval_score.py  test_contracts.py  test_enrich.py  test_fetch.py  test_filter.py  test_outline.py  test_prompts.py  test_review.py  test_score.py  test_select.py  test_write.py
tests/eval/: README.md  score-labels.jsonl
tools/: bgg_top_games.py  build-fonts.py  build_top_games_from_dump.py  fetch-articles.py
viz/: app.js  controls.js  data.js  engine.js  mockup_card.html  mockup_flyin.html  mockup_paper.html  paper.js  stages.js  view.js  viz-trace.json  viz.css
zonzijde/: __init__.py  cli.py  context.py  contracts.py  llm.py  net.py  prompts.py  report.py  trace.py  typeset.py
zonzijde/fases/: f1_fetch.py  f2_filter.py  f3_score.py  f4_select.py  f5_enrich.py  f6_outline.py  f7_write.py  f8_review.py  f9_compose.py
zonzijde/stages/: __init__.py  compose.py  enrich.py  fetch.py  filter.py  outline.py  review.py  score.py  select.py  write.py
(+43 files in other folders)
