[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zonzijde"
version = "0.1.0"
description = "De Zonzijde — weekly good-news paper pipeline (docs/ARCHITECTURE.md)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "PyYAML>=6",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
packages = ["zonzijde", "zonzijde.stages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
