[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zonzijde"
version = "0.1.0"
description = "De Zonzijde — weekly good-news paper pipeline (docs/ARCHITECTURE.md)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "PyYAML>=6",
    "requests>=2.31",
    # S5 enrich (PIPE-5): body-text extraction from fetched article pages.
    "trafilatura>=1.8",
    # Frontier tier (S4+) — imported lazily, only live runs need it (§6).
    "claude-agent-sdk>=0.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# S5's headless-browser fallback for blocked links; without it those links
# stay blocked and PIPE-5's re-source-or-drop handles them.
browser = ["playwright>=1.40"]

[tool.setuptools]
packages = ["zonzijde", "zonzijde.stages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
